--- a/presto-server/pom.xml
+++ b/presto-server/pom.xml
@@ -171,7 +171,13 @@
             <type>zip</type>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>com.facebook.presto</groupId>
+            <artifactId>presto-druid</artifactId>
+            <version>${project.version}</version>
+            <type>zip</type>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>com.facebook.presto</groupId>
             <artifactId>presto-postgresql</artifactId>
