--- a/presto-server/pom.xml
+++ b/presto-server/pom.xml
@@ -180,6 +180,13 @@
         </dependency>
         <dependency>
             <groupId>com.facebook.presto</groupId>
+            <artifactId>presto-clickhouse</artifactId>
+            <version>${project.version}</version>
+            <type>zip</type>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.facebook.presto</groupId>
             <artifactId>presto-postgresql</artifactId>
             <version>${project.version}</version>
             <type>zip</type>
